environment-modules (3.2.10-3) squeeze; urgency=low

  * Fix init scripts to export MODULEPATH.

 -- Mehdi Dogguy <mehdi@debian.org>  Thu, 28 Nov 2013 10:35:35 +0100

environment-modules (3.2.10-2) squeeze; urgency=low

  * Remove unnecessary patch (fix-bash_profile.patch).

 -- Mehdi Dogguy <mehdi@debian.org>  Tue, 19 Nov 2013 13:33:02 +0100

environment-modules (3.2.10-1) calibre7; urgency=low

  * Initial release

 -- Benoit Boccard <benoit-externe.boccard@edf.fr>  Mon, 21 Oct 2013 10:34:26 +0200